# corer

./: Makefile  README.md  author  map.txt
asm_corewar/: Makefile  asm.h  asm_checkers.c  asm_get_ins.c  asm_get_param.c  asm_helpers.c  asm_init.c  asm_main.c  asm_p_size.c  asm_param_type.c  asm_parse_header.c  asm_parse_instructions.c  asm_write_bc.c  asm_write_ins.c
asm_corewar/minilib/: Makefile  ft_atoi.c  ft_isdigit.c  ft_lstadd.c  ft_lstnew.c  ft_memalloc.c  ft_memcpy.c  ft_memset.c  ft_putchar.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strnew.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_tablen.c  get_next_line.c  minilib.h
corewar/: CMakeLists.txt  Makefile  arch.md  asm.md  corewar  datastructs.md  subject_done_better.md
corewar/includes/: op.h
corewar/libft/: CMakeLists.txt  Makefile
corewar/libft/classes_lib/: CMakeLists.txt  init_classes.c  new.c  queue.c  room.h
corewar/libft/ft_printf/ft_printf/: ft_printf.c
corewar/src/: log.c  log1.c  log2.c  main.c  main2.c  moving.c  moving2.c  op.h  operation_processing.c  operation_processing1.c  operation_processing2.c  operation_processing3.c  operation_processing4.c  operation_processing5.c  operation_processing6.c  operation_processing7.c  player_pars.c  player_pars1.c  process_init.c  vm_loop.c  vm_loop1.c
corewar/vm_champs/: debug_stand  outchamp.s
corewar/vm_champs/champs/: 42.s  ex.cor  ex.s  ko.cor  lde.cor
corewar_main/: Makefile  map.txt  shameless.s
corewar_main/includes/: ft_printf.h  op.h
corewar_main/libft/classes_lib/: room.h
corewar_main/libft/ft_printf/ft_printf/: ft_printf.c  ft_printf.h
corewar_main/src/: log.c  log1.c  log2.c  main.c  main2.c  operation_processing.c  operation_processing1.c  operation_processing2.c  operation_processing7.c  player_pars1.c  vm_loop1.c
corewar_main/vm_champs/: outchamp.cor
corewar_main/vm_champs/champs/: 42.cor  Gagnant.s  forkbot.cor  forkbot.s  ko.s  lde.s  test.cor  test.s
corewar_visualization/: 42cor  CMakeCache.txt  CMakeLists.txt  CorewarVis  Makefile  cmake_install.cmake
corewar_visualization/src/: CorewarVis.cpp  CorewarVis.h  Map.cpp  Map.h  OnCleanup.cpp  OnEvent.cpp  OnExecute.cpp  OnInit.cpp  OnLoad.cpp  OnLoop.cpp  OnRender.cpp  Player.cpp  Player.h  Process.cpp  Process.h  TextureObj.cpp  TextureObj.h  UserInterface.cpp  UserInterface.h  main.cpp  op.h
